--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,17 @@
-# Configuration du serveur
+#Server configuration
 server.servlet.context-path=/api
 server.port=8089
-spring.mvc.format.date=yyyy-MM-dd
-
-### BASE DE DONNÉES ###
+spring.mvc.format.date= yyyy-MM-dd
+### DATABASE ###
 spring.datasource.url=jdbc:mysql://localhost:3306/stationSki?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=
-
 ### JPA / HIBERNATE ###
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 
-### CONFIGURATION DU LOGGING ###
-logging.level.root=info
-# Modèle de logging pour la console
-logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %-5level - %logger{45} - %msg%n
+### logging configuration ###
+logging.level.root= info
+# Logging pattern for the console
+logging.pattern.console= =%d{yyyy-MM-dd HH:mm:ss} -  %-5level- %logger{45} - %msg %n
