--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,25 @@
-#Server configuration
+# Configuration du serveur
 server.servlet.context-path=/api
 server.port=8089
-spring.mvc.format.date= yyyy-MM-dd
-### DATABASE ###
+spring.mvc.format.date=yyyy-MM-dd
+
+# Configuration de la base de données
 spring.datasource.url=jdbc:mysql://localhost:3306/stationSki?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=
-### JPA / HIBERNATE ###
+spring.datasource.password=VotreMotDePasseMySQL
+
+# JPA / Hibernate
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 
-### logging configuration ###
-logging.level.root= info
-# Logging pattern for the console
-logging.pattern.console= =%d{yyyy-MM-dd HH:mm:ss} -  %-5level- %logger{45} - %msg %n
+# Configuration du logging avec Log4j
+logging.level.root=info
+logging.level.org.hibernate.SQL=debug
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=trace
+
+# Configuration pour Log4j
+log4j.rootLogger=DEBUG, console
+log4j.appender.console=org.apache.log4j.ConsoleAppender
+log4j.appender.console.layout=org.apache.log4j.PatternLayout
+log4j.appender.console.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1} - %m%n
