--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.mvc.format.date=yyyy-MM-dd
 # Configuration de la base de données
 spring.datasource.url=jdbc:mysql://localhost:3306/stationSki?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=VotreMotDePasseMySQL
+spring.datasource.password=
 
 # JPA / Hibernate
 spring.jpa.show-sql=true
@@ -18,7 +18,7 @@ logging.level.root=info
 logging.level.org.hibernate.SQL=debug
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=trace
 
-# Configuration pour Log4j
+# Log4j Configuration
 log4j.rootLogger=DEBUG, console
 log4j.appender.console=org.apache.log4j.ConsoleAppender
 log4j.appender.console.layout=org.apache.log4j.PatternLayout
